--- a/index.html
+++ b/index.html
@@ -116,15 +116,33 @@
             </div>
             <div class="trener">
                 <div class="knopki-tr">
-                    <div class="kn">Тренеры</div>
-                    <div class="kn">Оборудование</div>
-                    <div class="kn">Отзывы</div>
+                    <a href="#" class="kn">Тренеры</a>
+                    <a href="#" class="kn">Оборудование</a>
+                    <a href="#" class="kn">Отзывы</a>
                 </div>
                 <div class="text-cards">
-                    <p>Занятия на платформе проводят  профессиональные<br>  тренеры, спортсмены, мастера спорта. Очень важно<br> доверять тренеру, прислушиваться к нему, чтобы<br> тренировка была  эффективной<br>
+                    <p class="text-2">Занятия на платформе <br>проводят  профессиональные<br>  тренеры, спортсмены, мастера <br>спорта. Очень важно доверять <br>тренеру, прислушиваться к <br>нему, чтобы тренировка была  <br>эффективной
                         и безопасной.
                     </p>
+                    <div class="card-tr">
+                        <div class="cart">
+                            <img src="./assets/imgs/7.png">
+                            <h3>Ирина Усольцева</h3>
+                            <p>Мастер спорта по гимнастике</p>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/imgs/8.png">
+                            <h3>Елена Артемьева</h3>
+                            <p>Артистка балета</p>
+                        </div>
+                        <div class="cart">
+                            <img src="./assets/imgs/9.png">
+                            <h3>Алена Свиридова</h3>
+                            <p>Чемпионка России по акробатике</p>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </div>
