--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <a href="#">гайды</a>
                 </div>
                 <div class="icons-main">
-                  <a href#><img src="./assets/imgs/search.svg"></a>
-                  <a href#><img src="./assets/imgs/cart.svg"></a>
-                  <a href#><img src="./assets/imgs/home.svg"></a>
+                  <a href="#"><img src="./assets/imgs/search.svg"></a>
+                  <a href="#"><img src="./assets/imgs/cart.svg"></a>
+                  <a href="#"><img src="./assets/imgs/home.svg"></a>
                 </div>
             </div>
             <div class="main-head">
@@ -146,9 +146,144 @@
             </div>
         </div>
     </div>
-    <div class="section-about-us"></div>
-    <div class="section-work"></div>
-    <div class="section-form"></div>
-    <div class="section-footer"></div>
+    <div class="section-about-us">
+        <div class="container">
+            <div class="about">
+                <div class="text-about">
+                    <h1>О платформе Fitline</h1>
+                    <p>Fitline – это платформа онлайн-тренировок от лучших <br>
+                        тренеров России. Большой выбор программ и разный<br>
+                        уровень сложности в каждой из них позволят вам <br>
+                        подобрать ту физическую нагрузку, которая необходима.<br><br>
+                        На платформе есть тренировки для разных целей: <br>
+                        снижение веса, набор мышечной массы, восстановление,<br> 
+                        развитие гибкости, поддержка общего тонуса организма. 
+                    </p>
+                    <a href="#">Узнать больше</a>
+                </div>
+                <div class="photo-about"></div>
+            </div>
+        </div>
+    </div>
+    <div class="section-work">
+        <div class="container">
+            <div class="work">
+                <h1>Как это работает</h1>
+                <div class="puncts">
+                    <div class="embl">
+                        <p class="pun">01</p>
+                        <h3>Выбор программы</h3>
+                        <p class="desc">Выберите программу, которая <br>
+                            вам нравится или заполните <br>
+                            анкету на сайте, чтобы мы <br>
+                            смогли подобрать для вас <br>
+                            наиболее подходящую <br>
+                            тренировку.</p>
+                    </div>
+                    <div class="embl">
+                        <p class="pun">02</p>
+                        <h3>Личный кабинет</h3>
+                        <p class="desc">После оплаты тренировки <br>
+                            появятся в личном кабинете. <br>
+                            Каждая тренировка <br>
+                            открывается после выполнения <br>
+                            предыдущей, чтобы <br>
+                            распределять нагрузку.</p>
+                    </div>
+                    <div class="embl">
+                        <p class="pun">03</p>
+                        <h3>Правильный темп</h3>
+                        <p class="desc">Включите видео-тренировку <br>
+                            и занимайтесь, когда и где вам <br>
+                            удобно. В тренировку включен <br>
+                            таймер, чтобы вы могли следить <br>
+                            за темпом и делать паузы.</p>
+                    </div>
+                    <div class="embl">
+                        <p class="pun">04</p>
+                        <h3>Поддержка тренера</h3>
+                        <p class="desc">Каждое занятие <br>
+                            сопровождается инструкцией <br>
+                            тренера по технике выполнения <br>
+                            всех упражнений. Прислушивайтесь к нему, чтобы <br>
+                            тренировка была безопасной. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section-form">
+        <div class="conteiner">
+            <div class="box">
+                <div class="plane">
+                    <div class="text-plane">
+                        <h1>Персональный план питания</h1>
+                        <p>Важно уделять внимание не только физическим упражнениям, но и<br>
+                            полноценному питанию. Заполните анкету, и мы пришлем вам план<br>
+                            питания на месяц с учетом ваших особенностей и образа жизни. 
+                            </p>
+                    </div>
+                    <div class="forma-plane">
+                        <form>
+                            <div class="win">
+                                <div class="vert">
+                                    <div class="name">
+                                        <label>Имя</label>
+                                        <input type="text" placeholder="">
+                                    </div>
+                                    <div class="phone">
+                                        <label>Телефон</label>
+                                        <input type="tel" placeholder="">
+                                    </div>    
+                                </div>
+                                <div class="e-mail">
+                                    <label>E-mail</label>
+                                    <input type="email" placeholder="">
+                                </div>    
+                            </div>
+                            <div class="purpose">
+                                <p>Ваша цель</p>
+                                <div class="radio">
+                                    <input type="radio" id="snizh" name="radio" class="radio">
+                                    <label for="snizh">Снижение веса</label>
+                                    <input type="radio" id="nabor" name="radio" class="radio">
+                                    <label for="nabor">Набор веса</label>
+                                    <input type="radio" id="dr" name="radio" class="radio">
+                                    <label for="dr">Снижение веса</label>    
+                                </div>
+                            </div>
+                            <div class="sogl">
+                                <input type="checkbox" id="sogl">
+                                <label label="" for="sogl">Я согласен на обработку моих персональных данных</label>
+                            </div>
+                            <div class="but">
+                                <a href="#">Продолжить</a>
+                            </div>
+                            
+                        </form>
+                    </div>
+                </div>    
+            </div>
+        </div>
+    </div>
+    <div class="section-footer">
+        <div class="container">
+            <div class="foot">
+                <p>Fitline © 2021 Все права защищены</p>
+                <div class="social-f">
+                    <div class="icons">
+                        <a href="#"><img src="./assets/imgs/facebook.svg" alt=""></a>
+                    </div>
+                    <div class="icons">
+                        <a href="#"><img src="./assets/imgs/vk.svg" alt=""></a>
+                    </div>
+                    <div class="icons">
+                        <a href="#"><img src="./assets/imgs/instagram.svg" alt=""></a>
+                    </div>
+                </div>
+                <a href="#">Политика конфиденциальности</a>    
+            </div>
+        </div>
+    </div>
 </body>
 </html>
