--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="section-main">
         <div class="container">
             <div class="header">
-                <logo>
+                <div class="logo">
                     <img src="./assets/imgs/logotype.svg">
-                </logo>
+                </div>
                 <div class="nav">
                     <a href="#">йога</a>
                     <a href="#">мфр</a>
@@ -22,9 +22,15 @@
                     <a href="#">гайды</a>
                 </div>
                 <div class="icons-main">
-                  <a href="#"><img src="./assets/imgs/search.svg"></a>
-                  <a href="#"><img src="./assets/imgs/cart.svg"></a>
-                  <a href="#"><img src="./assets/imgs/home.svg"></a>
+                  <a href="#"><div class="circle">
+                    <img src="./assets/imgs/icon_search.svg">
+                  </div></a>
+                  <a href="#"><div class="circle">
+                    <img src="./assets/imgs/icon_cart.svg">
+                  </div></a>
+                  <a href="#"><div class="circle">
+                    <img src="./assets/imgs/icon_home.svg">
+                  </div></a>
                 </div>
             </div>
             <div class="main-head">
@@ -213,7 +219,7 @@
         </div>
     </div>
     <div class="section-form">
-        <div class="conteiner">
+        <div class="container">
             <div class="box">
                 <div class="plane">
                     <div class="text-plane">
